# spinup

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  package.json  pnpm-lock.yaml  schema.md  test-config.json  test-dry-run.json  test-full-integration.json  tsconfig.json
.github/workflows/: action.yml
rust/: .gitignore  Cargo.toml
rust/src/: auth.rs  config.json  config.rs  helpers.rs  main.rs
src/: auth.rs  config.json  config.rs  config.toml  config.yaml  crypto.rs  helpers.rs  index.ts  main.rs  schema.json  structs.rs  test_stow.rs  tests_v7.rs  types.ts
src/commands/: add.rs  checkSystem.ts  configureSystem.ts  diff.rs  mod.rs  status.rs
src/utils/: helpers.ts  schema.json
