cargo-features = ["edition2024"]

[package]
name = "spinup"
version = "0.2.0"
authors = ["Art Rosnovsky <art@rosnovsky.us>"]
edition = "2024"
description = "Quickly spin up a new Linux computer: install all the necessary software and configure the system to be ready for use."
readme = "README.md"
keywords = ["linux", "macos", "system", "setup", "configuration"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/rosnovsky/spinup"
homepage = "https://rosnovsky.us/spinup"
documentation = "https://rosnovsky.us/spinup/docs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
figlet-rs = "0.1.5"
futures = "0.3.30"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sysinfo = "0.35.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.12"
